--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>I Still Have Faith in You</h1>
-    <h3>Song by Abba</h3>
+    <h3>by Abba</h3>
     <p>I still have faith in you<br>
     I see it now<br>
     Through all these years that faith lives on<br>
